--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "cheerio": "^0.22.0",
     "mammoth": "^1.2.5",
     "node-sp-auth": "^1.1.3",
+    "request": "^2.78.0",
     "request-promise": "^4.1.1",
     "sp-request": "^2.0.2"
   },
-  "devDependencies": {
-    "sppull": "^1.1.0"
-  }
+  "devDependencies": {}
 }
