--- a/sls/serverless.yml
+++ b/sls/serverless.yml
@@ -24,10 +24,21 @@ service: PDPslacker # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs4.3
+  iamRoleStatements: # permissions for all of your functions can be set here
+    - Effect: Allow
+      Action: # Gives permission to DynamoDB tables in a specific region
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 # you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: test
+  region: us-east-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -53,9 +64,55 @@ provider:
 functions:
   slackNotifier:
     handler: slackNotifier/PDPslacker_slackNotifier.handler
-  
+    events: 
+      - http: 
+          path: /
+          method: post
+
   awsEndpoint:
     handler: PDPslacker_awsEndpoint.handler
+    events: 
+      - http: 
+          path: / 
+          method: get
+
+  invokeTaskList: 
+    handler: invokeTaskList/PDPslacker_invokeTaskList.handler
+    events:
+      - http: 
+          path: trigger/
+          method: post 
+
+resources:  
+  Resources:
+    DynamoDbTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: my-table
+        AttributeDefinitions:
+          - AttributeName: my_key
+            AttributeType: S
+        KeySchema:
+          - AttributeName: my_key
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
+    DynamoDBIamPolicy:
+      Type: AWS::IAM::Policy
+      DependsOn: DynamoDbTable
+      Properties:
+        PolicyName: lambda-dynamodb
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
+                - dynamodb:PutItem
+              Resource: arn:aws:dynamodb:*:*:table/my-table
+        Roles:
+          - Ref: IamRoleLambdaExecution
 
 
   # sharepointGrab:
